# RV-IR

./: .env  CMakeLists.txt  README.md
.cache/clangd/index/: AArch32ErrorTests.cpp.2EE24AD6F8692D60.idx  AArch32ErrorTests.cpp.4BF6E65890576D7F.idx  AArch32Tests.cpp.BDD4599A3DC14EC3.idx  AArch32Tests.cpp.F6033066C569922C.idx  AArch64.cpp.0EAA931066CB740E.idx  AArch64.cpp.175844183A3522AB.idx  AArch64.cpp.21773B866C422778.idx  AArch64.def.16695DB7815A61FD.idx  AArch64.def.B57625DDC1966364.idx  AArch64.h.4548FFD2B11BE229.idx  AArch64.h.92750355B173288D.idx  AArch64ACLETypes.def.32D4B483C6F8253F.idx  AArch64AttributeParser.cpp.2C73E69FCF819CCB.idx  AArch64AttributeParser.cpp.84C0FA8019A4ED2D.idx  AArch64AttributeParser.h.63E9D84D5AF0F946.idx  AArch64AttributeParser.h.7C06214BD3BA2D58.idx  AArch64BuildAttributes.cpp.080A035BC0CA506B.idx  AArch64BuildAttributes.cpp.60DB34BD5A1C12FB.idx  AArch64BuildAttributes.h.A39C8EE798B4220A.idx  AArch64BuildAttributes.h.AAECC26B47A64607.idx  AArch64CPUFeatures.inc.59B5DD69368B8A21.idx  AArch64CPUFeatures.inc.9B5F383254A6E698.idx  AArch64FeatPriorities.inc.45429F87D3AD7BE4.idx  AArch64FeatPriorities.inc.BE6AA15966499456.idx  AArch64ImmCheck.h.AAE2B39E7C7EBDD0.idx  AArch64TargetParser.cpp.402938BB3396A7C4.idx  AArch64TargetParser.cpp.832DFE18E62C331C.idx  AArch64TargetParser.h.1DAF34715C38BF68.idx  AArch64TargetParser.h.8CEE19B72598D54E.idx  AArch64Tests.cpp.22E1ECD7F6FE11BE.idx  AArch64Tests.cpp.A59EB113EBBE3082.idx  ABI.h.11D95FEC50D59780.idx  ABI.h.A9C5B33F22E3999A.idx  ABI.h.BE5243F7EB1D7535.idx  (+18754 more)
.github/workflows/: RollPyTorch.yml  bazelBuildAndTest.yml  buildRelease.yml  ci.yml  ci_windows.yml
include/torch-mlir/Conversion/: CMakeLists.txt  Passes.h  Passes.td  RISCVPasses.h  RISCVPasses.td
include/torch-mlir/Conversion/CIMToLLVM/: CIMToLLVM.h
include/torch-mlir/Conversion/LinalgToRISCV/: LinalgToRISCV.h
include/torch-mlir/Conversion/RISCVToAffine/: RISCVToAffine.h
include/torch-mlir/Conversion/RISCVToCIM/: RISCVToCIM.h
include/torch-mlir/Conversion/RISCVToLLVM/: RISCVToLLVM.h
include/torch-mlir/Dialect/CIM/: CMakeLists.txt
include/torch-mlir/Dialect/CIM/IR/: CIMDialect.h  CIMDialect.td  CIMOps.h  CIMOps.td  CIMPasses.h  CMakeLists.txt
include/torch-mlir/Dialect/RISCV/: CMakeLists.txt
include/torch-mlir/Dialect/RISCV/IR/: CMakeLists.txt  RISCVDialect.h  RISCVDialect.td  RISCVOps.h  RISCVOps.td  RISCVPasses.h
lib/: CMakeLists.txt  InitAll.cpp
lib/Conversion/: CMakeLists.txt  PassDetail.h  Passes.cpp
lib/Conversion/CIMToLLVM/: CIMToLLVM.cpp  CMakeLists.txt
lib/Conversion/LinalgToRISCV/: CMakeLists.txt  LinalgToRISCV.cpp
lib/Conversion/RISCVToAffine/: CMakeLists.txt  LowerToAffine.cpp
lib/Conversion/RISCVToCIM/: CMakeLists.txt  RISCVToCIM.cpp
lib/Conversion/RISCVToLLVM/: CMakeLists.txt  LowerToLLVM.cpp
lib/Dialect/: CMakeLists.txt
tools/torch-mlir-opt/: CMakeLists.txt  torch-mlir-opt.cpp
(+38 files in other folders)
