################################################################################
# CIMIncGen
#
# CIM dialect generated includes.
################################################################################

add_custom_target(CIMIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
#add_subdirectory(Transforms)
