################################################################################
# RISCVIncGen
#
# RISCV dialect generated includes.
################################################################################

add_custom_target(RISCVIncGen)

# Attributes, Dialect, Operations and Types.
add_subdirectory(IR)
#add_subdirectory(Transforms)
